Add a table to the card_sets/show.html.erb view that displays all the cards that are members of the current CardSet.
Add the ':uniq => true' parameter to the CardSet Model's 'has_many' method
call to hide the record duplication that is happening in the Membership model

--- a/app/views/card_sets/show.html.erb
+++ b/app/views/card_sets/show.html.erb
@@ -13,6 +13,15 @@
   <%=h @card_set.comments %>
 </p>
 
+<p>
+  <b>Cards:</b>
+  <table>
+    <tr><th>Game</th><th>Expansion</th><th>Name</th></tr>
+  <% @card_set.cards.each do |c| %>
+    <tr><td><%=h c.game%></td><td><%=h c.expansion %></td><td><%=h c.name %></td></tr>
+  <% end %>
+  </table>
+</p>
 
 <%= link_to 'Edit', edit_card_set_path(@card_set) %> |
 <%= link_to 'Back', card_sets_path %>
