Add sorting logic to all the views for CardSetController.

--- a/app/views/card_sets/show.html.erb
+++ b/app/views/card_sets/show.html.erb
@@ -17,8 +17,8 @@
   <b>Cards:</b>
   <table>
     <tr><th>Game</th><th>Expansion</th><th>Name</th></tr>
-  <% @card_set.cards.each do |c| %>
-    <tr><td><%=h c.game%></td><td><%=h c.expansion %></td><td><%=h c.name %></td></tr>
+  <% for card in @card_set.cards.all( :order => "game, expansion, name" ) %>
+    <tr><td><%=h card.game%></td><td><%=h card.expansion %></td><td><%=h card.name %></td></tr>
   <% end %>
   </table>
 </p>
