--- a/app/views/card_sets/new.html.erb
+++ b/app/views/card_sets/new.html.erb
@@ -19,7 +19,7 @@
     <b>Cards:</b>
     <table>
       <tr><th>include?</th><th>Game</th><th>Expansion</th><th>Name</th></tr>
-    <% for card in Card.all %>
+    <% for card in Card.all( :order => "game, expansion, name") %>
       <tr>
         <td><%= check_box_tag "card_set[card_ids][]", card.id, @card_set.cards.include?(card) %></td>
         <td><%=h card.game%></td><td><%=h card.expansion %></td><td><%=h card.name %></td></tr>
