--- a/app/views/card_sets/edit.html.erb
+++ b/app/views/card_sets/edit.html.erb
@@ -22,7 +22,7 @@
     <% for card in Card.all( :order => "game, expansion, name") %>
       <tr>
         <td><%= check_box_tag "card_set[card_ids][]", card.id, @card_set.cards.include?(card) %></td>
-        <td><%=h card.game%></td><td><%=h card.expansion %></td><td><%=h card.name %></td></tr>
+        <td><%=h card.game%></td><td><%=h card.expansion %></td><td><%=link_to card.name, card %></td></tr>
     <% end %>
     </table>
   </p>
