--- a/app/views/card_sets/index.html.erb
+++ b/app/views/card_sets/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing card_sets</h1>
+<h1>Listing card sets</h1>
 
 <table>
   <tr>
@@ -21,4 +21,4 @@
 
 <br />
 
-<%= link_to 'New card_set', new_card_set_path %>
+<%= link_to 'New card set', new_card_set_path %>
