--- a/app/views/card_sets/show.html.erb
+++ b/app/views/card_sets/show.html.erb
@@ -23,5 +23,5 @@
   </table>
 </p>
 
-<%= link_to 'Edit', edit_card_set_path(@card_set) %> |
-<%= link_to 'Back', card_sets_path %>
+<%= link_to 'Edit this set', edit_card_set_path(@card_set) %> |
+<%= link_to 'All sets', card_sets_path %>
