--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -29,5 +29,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_card_path(@card) %> |
-<%= link_to 'Back', cards_path %>
+<%= link_to 'Edit this card', edit_card_path(@card) %> |
+<%= link_to 'All cards', cards_path %>
