--- a/app/views/card_sets/new.html.erb
+++ b/app/views/card_sets/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New card_set</h1>
+<h1>New card set</h1>
 
 <% form_for(@card_set) do |f| %>
   <%= f.error_messages %>
@@ -31,4 +31,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', card_sets_path %>
+<%= link_to 'All sets', card_sets_path %>
