--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title><%= controller.name %> : <%= controller.action_name %></title>
+  <title><%= controller.controller_name %> : <%= controller.action_name %></title>
   <%= stylesheet_link_tag 'scaffold' %>
 </head>
 <body>
+
+  <div id="container">
+    <div id="user_nav">
+      <% if user_signed_in? %>
+        <%= link_to "Sign out", destroy_user_session_path %>
+      <% else %>
+        <%= link_to "Sign up", new_user_registration_path %> or <%= link_to "sign in", new_user_session_path %>
+      <% end  %>
+    </div>
+  </div>
 
   <p style="color: green"><%= flash[:notice] %></p>
   <p style="color: red"><%= flash[:alert] %></p>
