Clean up all the views.
Add role authorization checks before displaying links users aren't
authorized to use.

Change the 'back' navigation at the bottom of views to read:
  'Back to <resource>'

Add a link to the 'admin_index_path' if the user is an Admin
in the app/views/layouts/application.html.erb layout.

--- a/app/views/admin/show.html.erb
+++ b/app/views/admin/show.html.erb
@@ -11,4 +11,4 @@
 
 
 <%= link_to 'Edit this user', edit_admin_path(@user) %> |
-<%= link_to 'All users', admin_index_path %>
+<%= link_to 'Back to users', admin_index_path %>
