--- a/app/views/card_sets/edit.html.erb
+++ b/app/views/card_sets/edit.html.erb
@@ -32,4 +32,4 @@
 <% end %>
 
 <%= link_to 'Show this card', @card_set %> |
-<%= link_to 'All sets', card_sets_path %>
+<%= link_to 'Back to sets', card_sets_path %>
