--- a/app/views/admin/edit.html.erb
+++ b/app/views/admin/edit.html.erb
@@ -17,4 +17,4 @@
 <% end %>
 
 <%= link_to 'Show', admin_path( @user ) %> |
-<%= link_to 'All users', admin_index_path %>
+<%= link_to 'Back to users', admin_index_path %>
