--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -28,6 +28,7 @@
   <%=h @card.card_text %>
 </p>
 
-
-<%= link_to 'Edit this card', edit_card_path(@card) %> |
-<%= link_to 'All cards', cards_path %>
+<% if can? :edit, @card %>
+  <%= link_to 'Edit this card', edit_card_path(@card) %> |
+<% end %>
+<%= link_to 'Back to cards', cards_path %>
