--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,12 @@
   <div id="container">
     <div id="user_nav">
       <% if user_signed_in? %>
+        Signed in as <%=h current_user.email %>.  Not you?
         <%= link_to "Sign out", destroy_user_session_path %>
+        
+        <% if current_user.admin? %>
+          <%= link_to admin_index_path %>
+        <% end %>
       <% else %>
         <%= link_to "Sign up", new_user_registration_path %> or <%= link_to "sign in", new_user_session_path %>
       <% end  %>
