Modify any calls to helper _path methods to utilize the new overridden _path methods in the respective local helper modules.
mainly this means explicitly calling the _path method when Rails
was translating Records/Models into calls to _path methods to
Interpolate the path string.

For example:
  <td><%= link_to 'Show', card_set %></td>

  becomes:

  <td><%= link_to 'Show', card_set_path( card_set ) %></td>

This was only an issue in a few spots in the 'index' and 'edit'
views of the Cards and CardSets controllers.

--- a/app/views/card_sets/edit.html.erb
+++ b/app/views/card_sets/edit.html.erb
@@ -31,5 +31,5 @@
   </p>
 <% end %>
 
-<%= link_to 'Show this card', @card_set %> |
+<%= link_to 'Show this card', card_set_path( @card_set  ) %> |
 <%= link_to 'Back to sets', card_sets_path %>
