--- a/app/views/cards/edit.html.erb
+++ b/app/views/cards/edit.html.erb
@@ -32,5 +32,5 @@
   </p>
 <% end %>
 
-<%= link_to 'Show', @card %> |
+<%= link_to 'Show', card_path( @card ) %> |
 <%= link_to 'Back to cards', cards_path %>
