--- a/app/views/admin/reset.html.erb
+++ b/app/views/admin/reset.html.erb
@@ -4,6 +4,11 @@
   <%= f.error_messages %>
 
   <p>
+    <b>Username:</b>
+    <%=h @user.username %>
+  </p>
+
+  <p>
     <b>Email:</b>
     <%=h @user.email %>
   </p>
