Modify the edit and show views to display the Creator of a Card.

--- a/app/views/cards/edit.html.erb
+++ b/app/views/cards/edit.html.erb
@@ -28,6 +28,10 @@
     <%= f.text_area :card_text %>
   </p>
   <p>
+    <b>Creator:</b>
+    <%=h @card.creator.username %>
+  </p>
+  <p>
     <%= f.submit 'Update' %>
   </p>
 <% end %>
