--- a/app/views/card_sets/show.html.erb
+++ b/app/views/card_sets/show.html.erb
@@ -14,6 +14,11 @@
 </p>
 
 <p>
+  <b>Creator:</b>
+  <%=h @card_set.creator.username %>
+</p>
+
+<p>
   <b>Cards:</b>
   <table>
     <tr><th>Game</th><th>Expansion</th><th>Name</th></tr>
