Change the Start Player's game name from startplayer to start_player in any links

--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -16,7 +16,7 @@
 
 <% @cards.each do |card| %>
   <tr>
-    <td><%=h card.game %></td>
+    <td><%=h card.game.humanize %></td>
     <td><%=h card.expansion %></td>
     <td><%=h card.name %></td>
     <td><%=h card.card_type %></td>
