--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,8 @@
         <%= link_to "Cards", game_cards_path( 'dominion' ) %></li>
       <li>Thunderstone <%= link_to "Sets", game_card_sets_path( 'thunderstone' ) %> |
         <%= link_to "Cards", game_cards_path( 'thunderstone' ) %></li>
-      <li>Start Player <%= link_to "Sets", game_card_sets_path( 'startplayer' ) %> |
-        <%= link_to "Cards", game_cards_path( 'startplayer' ) %></li>
+      <li>Start Player <%= link_to "Sets", game_card_sets_path( 'start_player' ) %> |
+        <%= link_to "Cards", game_cards_path( 'start_player' ) %></li>
     </ul>
   </div>
 
