--- a/app/views/card_sets/new.html.erb
+++ b/app/views/card_sets/new.html.erb
@@ -3,6 +3,8 @@
 <% form_for(@card_set) do |f| %>
   <%= f.error_messages %>
 
+  <%= hidden_field_tag "card_set[game]", @game %>
+
   <p>
     <%= f.label :name %><br />
     <%= f.text_field :name %>
@@ -21,7 +23,11 @@
       <tr><th>include?</th><th>Game</th><th>Expansion</th><th>Name</th></tr>
     <% for card in Card.all( :order => "game, expansion, name") %>
       <tr>
-        <td><%= check_box_tag "card_set[card_ids][]", card.id, @card_set.cards.include?(card) %></td>
+        <% if @game == 'dominion' %>
+          <td><%= check_box_tag "card_set[card_ids][]", card.id, @random_set[:cards].include?(card.id) %></td>
+        <% else %>
+          <td><%= check_box_tag "card_set[card_ids][]", card.id, @card_set.cards.include?(card) %></td>
+        <% end %>
         <td><%=h card.game%></td><td><%=h card.expansion %></td><td><%=link_to card.name, card %></td>
       </tr>
     <% end %>
