--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <% end %>
       <% else %>
         You need to
-        <%= link_to "Sign up", new_user_registration_path %> or <%= link_to "sign in", new_user_session_path %>
+        <%= link_to "sign up", new_user_registration_path %> or <%= link_to "sign in", new_user_session_path %>
         if you want to create custom cards or card sets.
       <% end  %>
     </div>
