Begin the process of refactoring everything into seperate controllers.   (Why didn't I think of this sooner?!)
Create all the necessary controllers.

Begin working through a list of all actions and all views on each controller to confirm it still works!
  - So far, only DominionCardSetsController is (completely) done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,8 +28,8 @@
 
   <div id="navigation">
     <ul>
-      <li><%= link_to "Start Player", random_game_cards_path( 'start_player' ) %>
-      <li><%= link_to "Dominion", random_game_card_sets_path( 'dominion' ) %>
+      <li><%= link_to "Start Player", random_start_player_cards_path %>
+      <li><%= link_to "Dominion", random_dominion_card_sets_path %>
     </ul>
   </div>
 
