Continue the process of refactoring everything into seperate controllers.
Continue working through a list of all actions and all views on each controller to confirm it still works!
  - Completed StartPlayerSetsController
  - and, DominionCardsController

--- a/app/views/dominion_card_sets/index.html.erb
+++ b/app/views/dominion_card_sets/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing sets</h1>
+<h1>Listing Dominion card sets</h1>
 
 <table>
   <tr>
@@ -28,6 +28,6 @@
 <br />
 
 <% if can? :create, CardSet %>
-  <%= link_to 'New set', new_dominion_card_set_path %> |
+  <%= link_to 'New Dominion card set', new_dominion_card_set_path %> |
 <% end %>
-<%= link_to 'New random set', random_dominion_card_sets_path %>
+<%= link_to 'New random Dominion set', random_dominion_card_sets_path %>
