--- a/app/views/start_player_card_sets/edit.html.erb
+++ b/app/views/start_player_card_sets/edit.html.erb
@@ -1,9 +1,9 @@
-<h1>Editing Dominion card set</h1>
+<h1>Editing Start Player card set</h1>
 
-<% form_for(@dominion_card_set, :url => dominion_card_set_url ) do |f| %>
+<% form_for(@start_player_card_set, :url => start_player_card_set_url ) do |f| %>
     <%= f.error_messages %>
 
-    <% if can? :manage, @dominion_card_set %>
+    <% if can? :manage, @start_player_card_set %>
         <p>
           <%= f.label :game %><br />
           <%= f.text_field :game %>
@@ -28,7 +28,7 @@
     </p>
     <p>
       <b>Creator:</b>
-      <%=h @dominion_card_set.creator.username %>
+      <%=h @start_player_card_set.creator.username %>
     </p>
     <p>
       <b>Cards:</b>
@@ -36,7 +36,7 @@
       <tr><th>include?</th><th>Game</th><th>Expansion</th><th>Name</th></tr>
       <% for card in @all_cards %>
           <tr>
-            <td><%= check_box_tag "card_set[card_ids][]", card.id, @dominion_card_set.cards.include?(card) %></td>
+            <td><%= check_box_tag "card_set[card_ids][]", card.id, @start_player_card_set.cards.include?(card) %></td>
             <td><%=h card.game%></td><td><%=h card.expansion %></td><td><%=link_to card.name, card %></td></tr>
       <% end %>
     </table>
@@ -45,5 +45,5 @@
     </p>
 <% end %>
 
-<%= link_to 'Show this set', dominion_card_set_path( @dominion_card_set  ) %> |
-<%= link_to 'Back to Dominion card sets', dominion_card_sets_path %>
+<%= link_to 'Show this set', start_player_card_set_path( @start_player_card_set  ) %> |
+<%= link_to 'Back to Start Player card sets', start_player_card_sets_path %>
